--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,22 @@
-@media only screen and (max-width:767px) {
+/*==================================================
+=            Bootstrap 3 Media Queries             =
+==================================================*/
+ 
+/*==========  Mobile First Method  ==========*/
+ 
+ 
+/* Large Devices, Wide Screens */
+@media only screen and (min-width : 1200px) {
+ 
+}
+ 
+ 
+/* Medium Devices, Desktops */
+@media only screen and (min-width : 992px) {
+ 
+}
 
+@media only screen and (max-width:769px) {
 
 /* Hamburger Menu */
 
@@ -14,15 +31,24 @@ body {
 
 .menu {
 	position: fixed;
-	top: 0;
-	right: 0;
-	background-color: #262626;
+	top: 4%;
+	right: 4%;
+	background-color: #70072c;
 	height: 50px;
-	width: 50px;
+	width: 150px;
 	cursor: pointer;
 	transition: 0.3s;
 	z-index: 9999;
 	position: -webkit-sticky;
+	font-size: 26px;
+	padding: 12px;
+	border-radius: 10px;
+	display: block ;
+}
+
+.menu i {
+	margin: 0 auto;
+	color: white;
 }
 .menu span {
 	position: absolute;
@@ -30,7 +56,7 @@ body {
 	width: 25px;
 	background-color: #fff;
    	top: 50%;
-    left: 50%;
+    left: 86%;
     transform: translate(-50%,-50%);
     transition: 0.3s;
 }
@@ -71,16 +97,30 @@ body {
 	.navbar-menu { 
 		height: auto;
 		z-index: 1;
-		transform: translateX(-100%);
+		transform: translateY(-170%);
+		width: 150px;
+		height: 300px;
+		font-size: 12px;
+		color: white;
+	    position: fixed;
+	    top: 14%;
+	    right: 4%;
+	    left: auto;
+	    position: -webkit-sticky;
 
 	}
-	.menu-listing li {
-	 display: block; 
+	.menu-listing li a {
+		display: block; 
+		color: white;
+		font-size: 16px;
 	}
 	.navbar-menu .menu-listing { 
 		text-align: center;
 		padding: 0;
+		color: white;
+		margin: 0;
 	}
+
 
 	/* End */
 
@@ -91,7 +131,260 @@ body {
 	}
 
 	/* End */
-}
-@media only screen and (min-width:769px) {
 
+	.fp-main p {
+		font-size: 16px;
+		line-height: normal;
+	}
+
+	.wrap-tx {
+		padding: 2px;
+	}
+	.visit {
+		background-size: cover;
+		height: 145vh;
+	}
+
+	.shop-pr {
+		text-align: center;
+	}
+	.fix-img {
+		padding-top: 100px;
+	}
+
+	.pr-img i {
+		color: white;
+		text-align: center;
+		margin: 5vh 0 2vh 0;
+	}
+	.btn-sh-r {
+		display: unset;
+		border: 20px solid #ffff;
+	}
+
+	/*Latest News*/
+	.n-con-w span {
+		font-size: 26px;
+		padding: 0 10px 0 50px;
+		line-height: normal;
+	}
+
+	.btn-ln-1 {
+		font-size: 18px;
+		width: auto;
+		height: 10vh;
+	}
+
+	/*Join Mail List*/
+	.mail-l {
+		height: 24vh;
+		display: flex;
+	}
+
+	.sub-text {
+		flex-wrap: nowrap;
+		vertical-align: middle;
+	}
+
+	.sub-pop {
+		flex-wrap: nowrap;
+		vertical-align: middle;
+		margin-left: 10%;
+	}
+
+	.w-mail {
+		width: 90vw;
+	}
+
+	.w-mail span {
+		font-size: 40px;
+	}
+
+	/*   FOOTER  */
+
+	footer {
+		height: 72vh;
+	}
+
+	footer span {
+		font-size: 16px;
+	}
+
+	footer p {
+		font-size: 14px;
+		letter-spacing: normal;
+	}
+
+	.w-ft {
+		height: 30vh;
+		padding: 14vh 0 0 0;
+	}
+
+	.w-ft ul li {
+		display: inline-block;
+		width: auto;
+		font-size: small;
+		border: none;
+		font-weight: normal;
+	}
+
+	.w-ft ul li:after {
+    font-family: FontAwesome;
+    font-size: 5px;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    content: "\f111";
+    color: #8ba462;
+    position: relative;
+    bottom: 3px;
+    padding: 0 0 0 6px;
+	}
+
+
+	.f-e-msg {
+		background-color: #70072c;
+	}
+}
+
+/* Extra Small Devices, Phones */ 
+@media only screen and (max-width : 480px) {
+
+	.vines-l {
+		background: url(../img/vines-x.png);
+		width: 100%;
+	}
+
+	.fp-main {
+		height: 48vh;
+	}
+
+/*Visiting Winery */
+	.fix-img {
+		display: none;
+	}
+	.wrap-tx span {
+		font-size: 36px;
+	}
+
+	.wrap-tx i {
+		font-size: 24px;
+	}
+
+/*Tours and Visits*/
+
+	.t-l {
+		display: block;
+		height: 32vh;
+		font-size: 38px;
+	}
+
+	.t-l-1, .t-l-2 {
+		width: 100vw;
+		height: 16vh;
+	}
+/*Shop */
+	.pr-img {
+		background-image: url(../img/img1.jpg);
+		height: 40vh;
+		background-position: top;
+	}
+	.shop-pr {
+		padding: 2vh 0 0 0;
+	}
+
+	.pr-img span {
+		font-size: 46px;
+	}
+
+	.pr-img i {
+		font-size: 26px;
+		margin: 8vh 0 0 0;
+
+	}
+	.shop img {
+		display: none;
+	}
+
+/*Latest News*/
+
+	.inf-n-p {
+		font-size: 48px;
+	}
+
+	.n-con-w span {
+		height: 25vh;
+		padding: 0 2vw 0 2vw;
+	}
+
+	.n-con-w {
+		display: inline-flex;
+	}
+	.n-con-w p {
+		width: 75%;
+		height: 25vh;
+	}
+/*Join V.I.P. Club */
+	
+	.sub-text {
+		width: 100%;
+		text-align: center;
+	}
+	.sub-text span {
+		font-size: 32px;
+		padding-bottom: 2px;
+	}
+	.sub-pop {
+	margin: 0 auto;
+	width: 100%;
+	}
+
+	footer {
+		height: 100vh;
+	}
+}
+
+ /* Mobile M */ 
+@media only screen and (max-width :375px ) {
+    .fp-main {
+    	height: 60vh;
+    }
+    .visit {
+    	height: 170vh;
+    }
+
+    .shop-r i {
+    	margin: 8vh 0 4vh 0;
+    }
+
+    .btn-sh-r {
+    	font-size: 14px;
+    	line-height: normal;
+		/*border: 18px solid #fff;*/
+		border-top: 18px solid white;
+		border-right: 40px solid white;
+		border-bottom: 18px solid white;
+		border-left: 40px solid white;
+    }
+}
+
+
+ /* Custom, iPhone Retina Mobile S */ 
+@media only screen and (max-width : 320px) {
+    
+    .nav-logo img {
+
+    }
+
+    .visit {
+    	height: 180vh;
+    }
+
+    .wrap-tx button {
+    	width: 60%;
+    }
+
+    .list-w {
+    	height: 140vh;
+    }
 }
